[package]
name = "twapi-v2"
version = "0.8.1"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Twitter API v2 library."
repository = "https://github.com/aoyagikouhei/twapi-v2-rs"
keywords = ["twitter", "v2", "api", "client", "oauth"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/twapi-v2"

[dependencies]
base64 = { version = "0.21", optional = true }
chrono = { version = "0.4", features = [ "serde" ] }
hmac = { version = "0.12", optional = true }
itertools = "0.12"
oauth2 = { version = "4.4", optional = true }
rand = { version = "0.8", optional = true }
reqwest = { version = "0.11", features = ["json"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["time"], optional = true }
url = { version = "2.4", optional = true }

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
retry = ["tokio"]
oauth = ["oauth2"]
oauth10a = ["base64", "hmac", "rand", "sha1", "url"]
models = []

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
anyhow = "1"

[package.metadata.docs.rs]
all-features = true
features = ["retry", "oauth", "oauth10a", "rustls-tls", "models"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]