[package]
name = "twapi-v2"
version = "0.16.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Twitter API v2 library."
repository = "https://github.com/aoyagikouhei/twapi-v2-rs"
keywords = ["twitter", "v2", "api", "client", "oauth"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/twapi-v2"

[dependencies]
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", features = [ "serde" ] }
hmac = { version = "0.12", optional = true }
itertools = "0.14"
oauth2 = { version = "4.4", optional = true }
rand = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json", "multipart"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
form_urlencoded = { version = "1.2", optional = true }

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
retry = []
oauth = ["oauth2"]
oauth10a = ["base64", "hmac", "rand", "sha1", "form_urlencoded"]
models = []
upload = []

[dev-dependencies]
anyhow = "1"
mockito = "1.6"
tokio = { version = "1", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
features = ["retry", "oauth", "oauth10a", "rustls-tls", "models"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
