[package]
name = "oauth-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9.0"
twapi-v2 = { path="../..", features = ["retry", "oauth", "oauth11a"] }
url = "2.4"

[features]
retry = []
oauth = []