[package]
name = "oauth-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.10.0"
twapi-v2 = { path="../..", features = ["retry", "oauth", "oauth10a"] }

[features]
retry = []
oauth = []
oauth10a = []
models = []
upload = []