[package]
name = "oauth-web"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.11.0"
twapi-v2 = { path="../..", features = ["retry"] }
twapi-oauth2 = "0.1.0"

[features]
retry = []
oauth10a = []
models = []
upload = []