[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
twapi-v2 = { path="../..", features = ["retry", "oauth10a"] }
wasm-bindgen = "0.2.92"

[features]
retry = []
oauth10a = []
models = []
upload = []